<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101318"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_incident1"
            android:textColor="#FFF"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_report_will_be_submitted_anonymously"
            android:textColor="#A9AFB8" />

        <TextView
            style="@style/CSLabel"
            android:text="@string/crime_type" />

        <Spinner
            android:id="@+id/spinnerCrime"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            style="@style/CSLabel"
            android:text="@string/incident_location" />

        <EditText
            android:id="@+id/etLocation"
            style="@style/CSEdit"
            android:hint="@string/enter_location"
            android:inputType="text" />

        <TextView
            style="@style/CSLabel"
            android:text="@string/severity" />

        <Spinner
            android:id="@+id/spinnerSeverity"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            style="@style/CSLabel"
            android:text="@string/description" />

        <EditText
            android:id="@+id/etDescription"
            style="@style/CSEdit"
            android:layout_height="65dp"
            android:autofillHints=""
            android:hint="@string/describe_what_happened1"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/CSBtn"
            android:layout_marginTop="22dp"
            android:text="@string/submit_anonymous_report" />

    </LinearLayout>
</ScrollView>